<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.faveoftheday.Rakim">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rakim" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Explanation"
            android:textColor="@color/Explanation"
            android:textStyle="bold"
            android:textAllCaps="true"/>


        <Button
            android:id="@+id/album1"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/picture"
            android:text="@string/Paid_In_Full" />

        <Button
            android:id="@+id/album2"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album1"
            android:text="@string/Follow_The_Leader" />

        <Button
            android:id="@+id/album3"
            style="@style/AlbumListStyle"
            android:layout_below="@id/album2"
            android:text="@string/Let_The_Rhythm_Hit_Em" />

        <Button
            android:id="@+id/album4"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album3"
            android:text="@string/Dont_Sweat_The_Technique" />

        <Button
            android:id="@+id/album5"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album4"
            android:text="@string/The_18th_Letter" />

        <Button
            android:id="@+id/album6"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album5"
            android:text="@string/The_Master_Funk_Master_Flex_Sampler" />

        <Button
            android:id="@+id/album7"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album6"
            android:text="@string/The_Master" />

        <Button
            android:id="@+id/album8"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album7"
            android:text="@string/The_Seventh_Seal" />

    </RelativeLayout>
</ScrollView>