<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.android.faveoftheday.BoyzIIMen">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/boyziimen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Explanation"
            android:textColor="@color/Explanation"
            android:textStyle="bold"
            android:textAllCaps="true"/>


        <Button
            android:id="@+id/album1"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/picture"
            android:text="@string/CooleyHighHarmony" />


        <Button
            android:id="@+id/album2"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album1"
            android:text="@string/Christmas_Interpretations" />

        <Button
            android:id="@+id/album3"
            style="@style/AlbumListStyle"
            android:layout_below="@id/album2"
            android:text="@string/II" />

        <Button
            android:id="@+id/album4"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album3"
            android:text="@string/The_Remix_Collection" />

        <Button
            android:id="@+id/album5"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album4"
            android:text="@string/Nathan_Michael_Shawn_Wanya" />

        <Button
            android:id="@+id/album6"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album5"
            android:text="@string/Full_Circle" />

        <Button
            android:id="@+id/album7"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album6"
            android:text="@string/Throwback" />

        <Button
            android:id="@+id/album8"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album7"
            android:text="@string/Winter_Reflections" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

    </RelativeLayout>
</ScrollView>