<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.faveoftheday.AnitaBaker">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/outkast" />


        <Button
            android:id="@+id/album1"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/picture"
            android:text="@string/Southernplayalisticadillacmuzik" />


        <Button
            android:id="@+id/album2"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album1"
            android:text="@string/ATLiens" />

        <Button
            android:id="@+id/album3"
            style="@style/AlbumListStyle"
            android:layout_below="@id/album2"
            android:text="@string/Aquemini" />

        <Button
            android:id="@+id/album4"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album3"
            android:text="@string/Stankonia" />

        <Button
            android:id="@+id/album5"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album4"
            android:text="@string/Speakerboxxx_The_Love_Below" />

        <Button
            android:id="@+id/album6"
            style="@style/AlbumListStyle"
            android:layout_below="@+id/album5"
            android:text="@string/Idlewild" />

    </RelativeLayout>
</ScrollView>