<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.faveoftheday.MainActivity">

    <TextView
        android:id="@+id/AnitaBaker"
        style="@style/CategoryStyle"
        android:layout_weight="1"
        android:background="@color/category_AnitaBaker"
        android:gravity="center"
        android:text="@string/category_Anita_Baker" />

    <TextView
        android:id="@+id/BoyzIIMen"
        style="@style/CategoryStyle"
        android:layout_weight="1"
        android:background="@color/category_BoyzIIMen"
        android:gravity="center"
        android:text="@string/category_Boyz_II_Men" />

    <TextView
        android:id="@+id/OutKast"
        style="@style/CategoryStyle"
        android:layout_weight="1"
        android:background="@color/category_OutKast"
        android:gravity="center"
        android:text="@string/category_OutKast" />

    <TextView
        android:id="@+id/Rakim"
        style="@style/CategoryStyle"
        android:layout_weight="1"
        android:background="@color/category_Rakim"
        android:gravity="center"
        android:text="@string/category_Rakim" />

</LinearLayout>
